trying to fix scrollbars

--- a/assets/css/melpdesigns.css
+++ b/assets/css/melpdesigns.css
@@ -179,6 +179,10 @@ html::-webkit-scrollbar {
   display: none;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   /*background: url('http://placehold.it/1920x1080') no-repeat center center fixed;
@@ -188,6 +192,10 @@ body {
   -o-background-size: cover;*/
   overflow-x: hidden;
   position: relative;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 h6 a:link,
